--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang=en>
 <head>
 <title>Undisciplining the Victorian Classroom | Home</title>
+<meta name=description content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.">
 <meta charset=UTF-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.">
-<meta name=keywords content="victorian studies,critical race studies,undisciplining,antiracist,positive race consciousness,restorative justice,race and social movements,social justice,education,pedagogy,classroom,19th century,nineteenth century,pearl chaozon bauer,ryan fong,sophia hsu,adrian s. wisnicki,one more voice,accessible,responsive">
+<meta name=robots content="index, follow">
 <meta name=theme-color content=#1C4C87>
-<meta http-equiv=Cache-Control content="no-cache, no-store, must-revalidate">
-<meta http-equiv=Pragma content=no-cache>
-<meta http-equiv=Expires content=0>
 <link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon-180x180.png>
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
 <link rel=manifest href=site.webmanifest>
-<link rel=stylesheet href=css/style.css?random=@Environment.TickCount>
+<link rel=stylesheet href="css/style-dev.css?random=@Environment.TickCount">
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/jacksilver-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/jacksilver-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/sourcesanspro-regular-webfont.woff2>
