--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="index, follow">
 <meta name=theme-color content=#1C4C87>
-<link rel=stylesheet href="css/style.css?999">
+<link rel=stylesheet href=css/style.css?v998>
 <link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
@@ -20,12 +20,12 @@
 <link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-regular-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/notoserif-bold-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-bold-webfont.woff>
-<script>(function(){if(window.localStorage){if(!localStorage.getItem('firstLoad')){localStorage['firstLoad']=true;window.location.reload()}else{localStorage.removeItem('firstLoad')}}})();</script>
+<script>window.localStorage&&(localStorage.getItem("firstLoad")?localStorage.removeItem("firstLoad"):(localStorage.firstLoad=!0,window.location.reload()))</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-31768072-6")</script>
 </head>
 <body class=essay>
-<div class="text-container">
+<div class=text-container>
 <nav id=skiptocontent aria-labelledby=nav0>
 <a href=#main id=nav0 tabindex=0>skip to main content</a>
 </nav>
@@ -231,20 +231,7 @@ Anonymous Tlingit Artist, “Dance Blanket,” c.1880-c.1900
 </footer>
 <button onclick=topFunction() ontouchend=topFunction() id=topButton aria-label="Scroll to top" title="Scroll to top" tabindex=0>Top</button>
 </div>
-<script>
-/* Service Worker */
-			/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
-			if ("serviceWorker" in navigator) {
-			navigator.serviceWorker
-				.register("sw.js")
-				.then(serviceWorker => {
-				console.log("Service Worker registered: ", serviceWorker);
-				})
-				.catch(error => {
-				console.error("Error registering the Service Worker: ", error);
-				});
-			}
-</script>
+<script>if("serviceWorker"in navigator){navigator.serviceWorker.register("sw.js").then(serviceWorker=>{console.log("Service Worker registered: ",serviceWorker)}).catch(error=>{console.error("Error registering the Service Worker: ",error)})}</script>
 <script>var mybutton=document.getElementById("topButton");function scrollFunction(){20<document.body.scrollTop||20<document.documentElement.scrollTop?mybutton.style.display="block":mybutton.style.display="none"}function topFunction(){document.body.scrollTop=0,document.documentElement.scrollTop=0}window.onscroll=function(){scrollFunction()}</script>
 <script src=scripts/carousel.js></script>
 <script src=scripts/carouselItem.js></script>
