--- a/index.html
+++ b/index.html
@@ -42,134 +42,64 @@
 			<header id="header">
 				<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
 				<!-- Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html -->
-				<section id="myCarousel"
-				class="carousel"
-				aria-roledescription="carousel"
-				aria-label="Images from around the Victorian Globe by Non-European Artists">
+				<section id="myCarousel" class="carousel" aria-roledescription="carousel" aria-label="Images from around the Victorian Globe by Non-European Artists">
 					<div class="carousel-inner">
 						<div class="controls">
-						<button class="rotation pause" aria-label="Stop automatic slide show" title="Rotation Pause">
-							<svg width="42"
-								height="34"
-								version="1.1"
-								xmlns="http://www.w3.org/2000/svg">
-							<rect class="background"
-									x="2"
-									y="2"
-									rx="5"
-									ry="5"
-									width="38"
-									height="24"></rect>
-							<rect class="border"
-									x="4"
-									y="4"
-									rx="5"
-									ry="5"
-									width="34"
-									height="20"></rect>
-							<polygon class="pause" points="17 8 17 20"></polygon>
-							<polygon class="pause" points="24 8 24 20"></polygon>
-							<polygon class="play" points="15 8 15 20 27 14"></polygon>
-							</svg>
-						</button>
-						<button class="previous"
-								aria-controls="myCarousel-items"
-								aria-label="Previous Slide"
-								title="Previous Slide">
-							<svg width="42"
-								height="34"
-								version="1.1"
-								xmlns="http://www.w3.org/2000/svg">
-							<rect class="background"
-									x="2"
-									y="2"
-									rx="5"
-									ry="5"
-									width="38"
-									height="24"></rect>
-							<rect class="border"
-									x="4"
-									y="4"
-									rx="5"
-									ry="5"
-									width="34"
-									height="20"></rect>
-							<polygon points="9 14 21 8 21 11 33 11 33 17 21 17 21 20"></polygon>
-							</svg>
-						</button>
-						<button class="next"
-								aria-controls="myCarousel-items"
-								aria-label="Next Slide"
-								title="Next Slide">
-							<svg width="42"
-								height="34"
-								version="1.1"
-								xmlns="http://www.w3.org/2000/svg">
-							<rect class="background"
-									x="2"
-									y="2"
-									rx="5"
-									ry="5"
-									width="38"
-									height="24"></rect>
-							<rect class="border"
-									x="4"
-									y="4"
-									rx="5"
-									ry="5"
-									width="34"
-									height="20"></rect>
-							<polygon points="9 11 21 11 21 8 33 14 21 20 21 17 9 17"></polygon>
-							</svg>
+							<button class="rotation pause" aria-label="Stop automatic slide show" title="Rotation Pause">
+								<svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
+									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
+									<polygon class="pause" points="17 8 17 20"></polygon>
+									<polygon class="pause" points="24 8 24 20"></polygon>
+									<polygon class="play" points="15 8 15 20 27 14"></polygon>
+								</svg>
+							</button>
+							<button class="previous" aria-controls="myCarousel-items" aria-label="Previous Slide" title="Previous Slide">
+								<svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
+									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
+									<polygon points="9 14 21 8 21 11 33 11 33 17 21 17 21 20"></polygon>
+								</svg>
+							</button>
+							<button class="next" aria-controls="myCarousel-items" aria-label="Next Slide" title="Next Slide">
+								<svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
+									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
+									<polygon points="9 11 21 11 21 8 33 14 21 20 21 17 9 17"></polygon>
+								</svg>
 						</button>
 						</div>
 						<div id="myCarousel-items" class="carousel-items" aria-live="off">
 							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0003-deriv-1200px.jpg" srcset="/img/home/uvc_0003-deriv-1800px.jpg 1800w, /img/home/uvc_0003-deriv-1650px.jpg 1650w, /img/home/uvc_0003-deriv-1500px.jpg 1500w, /img/home/uvc_0003-deriv-1350px.jpg 1350w, /img/home/uvc_0003-deriv-1200px.jpg 1200w, /img/home/uvc_0003-deriv-1050px.jpg 1050w, /img/home/uvc_0003-deriv-900px.jpg 900w, /img/home/uvc_0003-deriv-750px.jpg 750w, /img/home/uvc_0003-deriv-600px.jpg 600w, /img/home/uvc_0003-deriv-450px.jpg 450w, /img/home/uvc_0003-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
+										<img src="/img/home/uvc_0003-deriv-1200px.jpg" srcset="/img/home/uvc_0003-deriv-1800px.jpg 1800w, /img/home/uvc_0003-deriv-1650px.jpg 1650w, /img/home/uvc_0003-deriv-1500px.jpg 1500w, /img/home/uvc_0003-deriv-1350px.jpg 1350w, /img/home/uvc_0003-deriv-1200px.jpg 1200w, /img/home/uvc_0003-deriv-1050px.jpg 1050w, /img/home/uvc_0003-deriv-900px.jpg 900w, /img/home/uvc_0003-deriv-750px.jpg 750w, /img/home/uvc_0003-deriv-600px.jpg 600w, /img/home/uvc_0003-deriv-450px.jpg 450w, /img/home/uvc_0003-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;"/>
 								</div>
 								<div class="carousel-caption">
-									<p>
-										<a href="#kalighat" id="carousel-label-1">
-											Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
-										</a>
-									</p>
+									<p><a href="#kalighat" id="carousel-label-1">Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail</a></p>
 								</div>
 							</div>
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0002-deriv-1200px.jpg" srcset="/img/home/uvc_0002-deriv-1800px.jpg 1800w, /img/home/uvc_0002-deriv-1650px.jpg 1650w, /img/home/uvc_0002-deriv-1500px.jpg 1500w, /img/home/uvc_0002-deriv-1350px.jpg 1350w, /img/home/uvc_0002-deriv-1200px.jpg 1200w, /img/home/uvc_0002-deriv-1050px.jpg 1050w, /img/home/uvc_0002-deriv-900px.jpg 900w, /img/home/uvc_0002-deriv-750px.jpg 750w, /img/home/uvc_0002-deriv-600px.jpg 600w, /img/home/uvc_0002-deriv-450px.jpg 450w, /img/home/uvc_0002-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+										<img src="/img/home/uvc_0002-deriv-1200px.jpg" srcset="/img/home/uvc_0002-deriv-1800px.jpg 1800w, /img/home/uvc_0002-deriv-1650px.jpg 1650w, /img/home/uvc_0002-deriv-1500px.jpg 1500w, /img/home/uvc_0002-deriv-1350px.jpg 1350w, /img/home/uvc_0002-deriv-1200px.jpg 1200w, /img/home/uvc_0002-deriv-1050px.jpg 1050w, /img/home/uvc_0002-deriv-900px.jpg 900w, /img/home/uvc_0002-deriv-750px.jpg 750w, /img/home/uvc_0002-deriv-600px.jpg 600w, /img/home/uvc_0002-deriv-450px.jpg 450w, /img/home/uvc_0002-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead."/>
 								</div>
 								<div class="carousel-caption">
-									<p>
-										<a href="#markino" id="carousel-label-2">
-											Yoshio Markino, “Earl's Court Station,” 1910
-										</a>
-									</p>
+									<p><a href="#markino" id="carousel-label-2">Yoshio Markino, “Earl's Court Station,” 1910</a></p>
 								</div>
 							</div>					
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0004-deriv-1200px.jpg" srcset="/img/home/uvc_0004-deriv-1200px.jpg 1200w, /img/home/uvc_0004-deriv-1050px.jpg 1050w, /img/home/uvc_0004-deriv-900px.jpg 900w, /img/home/uvc_0004-deriv-750px.jpg 750w, /img/home/uvc_0004-deriv-600px.jpg 600w, /img/home/uvc_0004-deriv-450px.jpg 450w, /img/home/uvc_0004-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+										<img src="/img/home/uvc_0004-deriv-1200px.jpg" srcset="/img/home/uvc_0004-deriv-1200px.jpg 1200w, /img/home/uvc_0004-deriv-1050px.jpg 1050w, /img/home/uvc_0004-deriv-900px.jpg 900w, /img/home/uvc_0004-deriv-750px.jpg 750w, /img/home/uvc_0004-deriv-600px.jpg 600w, /img/home/uvc_0004-deriv-450px.jpg 450w, /img/home/uvc_0004-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose."/>
 								</div>
 								<div class="carousel-caption">
-									<p>
-										<a href="#mcrae" id="carousel-label-3">
-											Tommy McRae, Untitled Illustration, 1896
-										</a>
-									</p>
+									<p><a href="#mcrae" id="carousel-label-3">Tommy McRae, Untitled Illustration, 1896</a></p>
 								</div>
 							</div>	
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0001-deriv-1050px.jpg" srcset="/img/home/uvc_0001-deriv-1050px.jpg 1050w, /img/home/uvc_0001-deriv-900px.jpg 900w, /img/home/uvc_0001-deriv-750px.jpg 750w, /img/home/uvc_0001-deriv-600px.jpg 600w, /img/home/uvc_0001-deriv-450px.jpg 450w, /img/home/uvc_0001-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+										<img src="/img/home/uvc_0001-deriv-1050px.jpg" srcset="/img/home/uvc_0001-deriv-1050px.jpg 1050w, /img/home/uvc_0001-deriv-900px.jpg 900w, /img/home/uvc_0001-deriv-750px.jpg 750w, /img/home/uvc_0001-deriv-600px.jpg 600w, /img/home/uvc_0001-deriv-450px.jpg 450w, /img/home/uvc_0001-deriv-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure."/>
 								</div>
 								<div class="carousel-caption">
-									<p>
-										<a href="#fante" id="carousel-label-4">
-											Anonymous Fante Artist, Asafo Flag, 1910
-										</a>
-									</p>
+									<p><a href="#fante" id="carousel-label-4">Anonymous Fante Artist, Asafo Flag, 1910</a></p>
 								</div>
 							</div>
 						</div>
@@ -198,7 +128,7 @@
 				</section>
 				
 				<!-- <div class="image-wrapper">
-					<img class="image-border" loading="lazy" src="/img/home/uvc_0005-deriv-1640px.jpg" srcset="/img/home/uvc_0005-deriv-1640px.jpg 1640w, /img/home/uvc_0005-deriv-1244px.jpg 1244w, /img/home/uvc_0005-deriv-864px.jpg 864w, /img/home/uvc_0005-deriv-622px.jpg 622w, /img/home/uvc_0005-deriv-592px.jpg 592w, /img/home/uvc_0005-deriv-432px.jpg 432w, /img/home/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<img class="image-border" loading="lazy" src="/img/home/uvc_0005-deriv-1640px.jpg" srcset="/img/home/uvc_0005-deriv-1640px.jpg 1640w, /img/home/uvc_0005-deriv-1244px.jpg 1244w, /img/home/uvc_0005-deriv-864px.jpg 864w, /img/home/uvc_0005-deriv-622px.jpg 622w, /img/home/uvc_0005-deriv-592px.jpg 592w, /img/home/uvc_0005-deriv-432px.jpg 432w, /img/home/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/)."/>
 					<div class="image-caption">
 						<p>
 							<a href="#gee">
@@ -210,7 +140,7 @@
 				
 				<section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
-						<img loading="lazy" src="/img/home/uvc_0006-deriv-1170px.jpg" srcset="/img/home/uvc_0006-deriv-1170px.jpg 1170w, /img/home/uvc_0006-deriv-888px.jpg 888w, /img/home/uvc_0006-deriv-585px.jpg 585w, /img/home/uvc_0006-deriv-568px.jpg 568w, /img/home/uvc_0006-deriv-444px.jpg 444w, /img/home/uvc_0006-deriv-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
+						<img loading="lazy" src="/img/home/uvc_0006-deriv-1170px.jpg" srcset="/img/home/uvc_0006-deriv-1170px.jpg 1170w, /img/home/uvc_0006-deriv-888px.jpg 888w, /img/home/uvc_0006-deriv-585px.jpg 585w, /img/home/uvc_0006-deriv-568px.jpg 568w, /img/home/uvc_0006-deriv-444px.jpg 444w, /img/home/uvc_0006-deriv-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/)."/>
 						<div class="image-caption">
 							<p>
 								<a href="#dance">
