--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -15,6 +15,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preload" as="style" href="/css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="style" href="/css/content.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="style" href="/css/youtube.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
@@ -23,6 +24,7 @@
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
+		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0001"/>
 		<link rel="stylesheet" type="text/css" href="/css/youtube.css?=newVers_0001"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
