--- a/common/nav.html
+++ b/common/nav.html
@@ -15,8 +15,6 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span id="syllabi">Syllabi</span></a></li>
 
-					<!-- <li role="none"><a role="menuitem" aria-haspopup="false" href="/faq.html"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i> <span id="faq">FAQ</span></a></li> -->
-
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span id="about">About</span></a></li>
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Email</span></a></li>
@@ -37,10 +35,10 @@
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span>Lesson Plans</span></a></li>
 		
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span>Syllabi</span></a></li>
-
-							<!-- <li role="none"><a role="menuitem" aria-haspopup="false" href="/faq.html"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i> <span>FAQ</span></a></li> -->
 		
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span>About</span></a></li>
+
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Email</span></a></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Email</span></a></li>
 
